--- a/Stocks Information/res/layout/main.xml
+++ b/Stocks Information/res/layout/main.xml
@@ -7,6 +7,6 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="hi everyone" />
+        android:text="hi everyone, love euan" />
 
 </LinearLayout>
