--- a/Stocks Information/res/layout/pricetag.xml
+++ b/Stocks Information/res/layout/pricetag.xml
@@ -9,12 +9,12 @@ android:layout_x="201px"
 android:layout_y="165px"
 android:gravity="center_horizontal">
 <ImageView
-android:id="@+id/pricetag.png"
+android:id="@+id/pricetag_image"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content">
 </ImageView>
 <TextView
-android:id="@+id/icon_text"
+android:id="@+id/pricetag_text"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:text="TextView"
