--- a/My First App/res/layout/activity_main.xml
+++ b/My First App/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/last_update"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="#080808"
@@ -32,6 +33,7 @@
             android:typeface="serif" />
 
         <TextView
+            android:id="@+id/val_bp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="£0.00"
@@ -39,6 +41,7 @@
             android:textSize="32dp"
             android:textStyle="bold"
             android:typeface="serif" />
+
     </LinearLayout>
     
 
@@ -59,6 +62,7 @@
             android:typeface="serif" />
 
         <TextView
+            android:id="@+id/val_hsba"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="£0.00"
@@ -84,6 +88,7 @@
             android:typeface="serif" />
 
         <TextView
+            android:id="@+id/val_expn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="£0.00"
@@ -91,6 +96,7 @@
             android:textSize="32dp"
             android:textStyle="bold"
             android:typeface="serif" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -109,6 +115,7 @@
             android:typeface="serif" />
 
         <TextView
+            android:id="@+id/val_mks"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="£0.00"
@@ -116,6 +123,7 @@
             android:textSize="32dp"
             android:textStyle="bold"
             android:typeface="serif" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -133,6 +141,7 @@
             android:typeface="serif" />
 
         <TextView
+            android:id="@+id/val_sn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="£0.00"
@@ -140,6 +149,7 @@
             android:textSize="32dp"
             android:textStyle="bold"
             android:typeface="serif" />
+
     </LinearLayout>
 
 </LinearLayout>
