--- a/Stocksappfinal/res/layout/activity_main.xml
+++ b/Stocksappfinal/res/layout/activity_main.xml
@@ -1,155 +1,24 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentTop="true"
-    android:orientation="vertical" >
+    android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/last_update"
-        android:layout_width="fill_parent"
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#080808"
-        android:gravity="center_vertical|center_horizontal"
-        android:height="35dp"
-        android:text="last updated: 09/11/2012 at 14:12"
-        android:textColor="#C0C0C0"
-        android:textSize="14dp"
-        android:textStyle="italic" />
-    
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="@string/hello_world"
+        tools:context=".MainActivity" />
 
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="BP"
-            android:textColor="#000000"
-            android:textSize="32dp"
-            android:textStyle="bold"
-            android:typeface="serif" />
-
-        <TextView
-            android:id="@+id/val_bp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="£0.00"
-            android:textColor="#00ff00"
-            android:textSize="32dp"
-            android:textStyle="bold"
-            android:typeface="serif" />
-
-    </LinearLayout>
-    
-
-    
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#efefef" >
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        android:text="Button" />
 
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="HSBA"
-            android:textColor="#000000"
-            android:textSize="32dp"
-            android:textStyle="bold"
-            android:typeface="serif" />
-
-        <TextView
-            android:id="@+id/val_hsba"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="£0.00"
-            android:textColor="#00ff00"
-            android:textSize="32dp"
-            android:textStyle="bold"
-            android:typeface="serif" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="EXPN"
-            android:textColor="#000000"
-            android:textSize="32dp"
-            android:textStyle="bold"
-            android:typeface="serif" />
-
-        <TextView
-            android:id="@+id/val_expn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="£0.00"
-            android:textColor="#00ff00"
-            android:textSize="32dp"
-            android:textStyle="bold"
-            android:typeface="serif" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#efefef" >
-
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="MKS"
-            android:textColor="#000000"
-            android:textSize="32dp"
-            android:textStyle="bold"
-            android:typeface="serif" />
-
-        <TextView
-            android:id="@+id/val_mks"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="£0.00"
-            android:textColor="#00ff00"
-            android:textSize="32dp"
-            android:textStyle="bold"
-            android:typeface="serif" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="SN"
-            android:textColor="#000000"
-            android:textSize="32dp"
-            android:textStyle="bold"
-            android:typeface="serif" />
-
-        <TextView
-            android:id="@+id/val_sn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="£0.00"
-            android:textColor="#00ff00"
-            android:textSize="32dp"
-            android:textStyle="bold"
-            android:typeface="serif" />
-
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
