--- a/Source/com.hannsg.Stocksappfinal.MainMenu/res/layout/activity_portfolio.xml
+++ b/Source/com.hannsg.Stocksappfinal.MainMenu/res/layout/activity_portfolio.xml
@@ -1,14 +1,43 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentTop="true"
+    android:orientation="vertical" >
+
+
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/last_update"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world"
-        tools:context=".Portfolio" />
+        android:background="#080808"
+        android:gravity="center_vertical|center_horizontal"
+        android:height="35dp"
+        android:text="Last Updated: 01/01/2012"
+        android:textColor="#C0C0C0"
+        android:textSize="14dp"
+        android:textStyle="italic"
+        tools:ignore="HardcodedText" />
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="Total Portfolio Value:"
+        android:textColor="#000000"
+        android:textSize="16dp"
+        android:typeface="serif" />
+
+    <TextView
+        android:id="@+id/val_total"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="£0.00"
+        android:textSize="42dp"
+        android:textStyle="bold"
+        android:typeface="serif" />
+
+</LinearLayout>
