--- a/Stocksappfinal/res/layout/breakdown.xml
+++ b/Stocksappfinal/res/layout/breakdown.xml
@@ -5,7 +5,7 @@
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true"
     android:orientation="vertical" >
-
+
     <TextView
         android:id="@+id/last_update"
         android:layout_width="fill_parent"
@@ -13,10 +13,11 @@
         android:background="#080808"
         android:gravity="center_vertical|center_horizontal"
         android:height="35dp"
-        android:text="last updated: 09/11/2012 at 14:12"
+        android:text="Accurate within 15 minutes"
         android:textColor="#C0C0C0"
         android:textSize="14dp"
-        android:textStyle="italic" />
+        android:textStyle="italic"
+        tools:ignore="HardcodedText" />
     
     <LinearLayout
         android:layout_width="match_parent"
